# dap-cli-dashboard

./: LICENSE  README.md  requirements.txt  setup.cfg
dap-cli-dashboard/: dashboard.py
dap_cli_dashboard/dashboards/default/: dashboard.css  dashboard.py
dap_cli_dashboard/dashboards/default/views/: panel.py
test_cli/: __main__.py
