[metadata]
name = dap-cli-dashboard
version = attr: dap-cli-dashboard.__version__
description = Dashboard for the DAP CLI tool displayed directly in the terminal
author = David Moldvai
author_email = david.moldvai@instructure.com
maintainer = Edina Tipter
maintainer_email = edina.tipter@instructure.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    json_strong_typing >= 0.2.5

[options.packages.find]
exclude =
    dap-cli-dashboard.tests*
